# pebble-500M

./: .gitignore  README.md  TRAINING_FINDINGS.md  TRAINING_OPTIMIZATIONS.md  generate_sft.py  pyproject.toml  train_sft.py
configs/: pebble_500m.yaml  pebble_500m_30b.yaml  pebble_500m_35b.yaml  pebble_500m_50b.yaml  smoke.yaml
scripts/: prepare_50b_data_and_sync.sh  prepare_identity_sft_continuation.sh  restore_nvme_from_s3.sh  s3_smoke_test.sh  s3_tokenization_smoke_test.sh  ssh_statement_tmux.sh  start_data_prep_tmux.sh  sync_checkpoints_to_s3.sh  sync_data_from_s3.sh  sync_data_to_s3.sh  sync_identity_sft_continuation_to_remote.sh  train_identity_sft_from_3500.sh
src/pebble/: __init__.py  config.py  data.py  generate.py  make_synthetic_data.py  model.py  prepare_fineweb_edu.py  prepare_sft_data.py  train.py
tests/: test_checkpointing.py  test_data.py  test_model.py  test_prepare_local_jsonl.py  test_prepare_sft_data.py  test_train_sft.py  test_wandb_tracking.py
